# PractWave

./: .gitignore  .gitmodules  CMakeLists.txt  CabureApplication.cpp  CabureApplication.h  CabureUserManager.cpp  CabureUserManager.h  CabureWidgetPrincipal.cpp  CabureWidgetPrincipal.h  LICENSE  Makefile  README  README.md  caburewt.cpp  index.html  params.json  start.sh  stop.sh
apps/: App.h  CMakeLists.txt
apps/Caixa/: CMakeLists.txt  CaixaApp.cpp  CaixaApp.h  TileCaixa.cpp
apps/Calculadora/: CMakeLists.txt  CalculadoraApp.cpp  CalculadoraApp.h  TileCalculadora.cpp
apps/Cliente/: CMakeLists.txt  ClienteApp.cpp  ClienteApp.h  TileCliente.cpp
apps/ContaBancaria/: CMakeLists.txt  ContaBancariaApp.cpp  ContaBancariaApp.h  TileContaBancaria.cpp
apps/Fornecedor/: CMakeLists.txt  FornecedorApp.cpp  FornecedorApp.h  TileFornecedor.cpp
apps/Loja/: CMakeLists.txt  LojaApp.cpp  LojaApp.h  TileLoja.cpp
apps/Painel/: CMakeLists.txt  Painel.cpp  Painel.h  PainelApp.cpp  PainelApp.h  TilePainel.cpp
apps/Timeline/: CMakeLists.txt  TileTimeline.cpp  Timeline.cpp  TimelineApp.cpp  TimelineApp.h
cabureAds/: AdsAnuncio.cpp  AdsAnuncio.h  AdsApplication.cpp  AdsApplication.h  AdsEditor.cpp  AdsEditor.h  AdsManage.cpp  AdsManage.h  AdsTeste.cpp  AdsTeste.h  AdsWidget.cpp  AdsWidget.h  AdsWidgetBuilder.cpp  AdsWidgetBuilder.h  CMakeLists.txt  Makefile  README  adswt.cpp
core/: CMakeLists.txt  CabureApplication.h  CabureUserManager.cpp  CabureUserManager.h  CabureWidgetPrincipal.cpp  CabureWidgetPrincipal.h  caburewt.cpp
cupom/: criaCupons.pl  criaPacotes.pl
deploy/: wt_config.xml
email/: 1.pl  CabureEmail.pm  aceitaTodosConvitesPendentes.pl  bemvindo.pl  cadastroFornecedores.pl  cadastroclientes.pl  caixa.pl  campanha.pl  cincoerros.pl  contasbancarias.pl  criaCampanha.pl  criaNotificacao.pl  emailadm.pl  extencaochrome.pl  importargoogle.pl  listaUsuarios.pl  meusdados.pl  modelo.pl  notifica.pl  oficinamecanica.pl  painel.pl  report.pl  salaodebeleza.pl  setup.sh  socomconvite.pl  teste.pl
email/ses/: aws-credentials
lang/: messages.xml  messages_pt.xml
logic/: CMakeLists.txt  Caixa.cpp  Caixa.h  Clientes.cpp  Clientes.h  Contabilidade.cpp  Contabilidade.h  ContasBancarias.cpp  ContasBancarias.h  Fornecedores.cpp  Fornecedores.h  Moeda.cpp  Moeda.h  Notificacao.cpp  Notificacao.h  Servicos.cpp  Servicos.h  Timeline.cpp  Timeline.h  meusdados.cpp  meusdados.h
store/: index.org
utils/: CMakeLists.txt
utils/pugixml/: CMakeLists.txt
widgets/: CMakeLists.txt
widgets/AjusteContaWidget/: AjusteContaWidget.cpp  AjusteContaWidget.h  CMakeLists.txt
widgets/ContaCliente/: CMakeLists.txt  ContaCliente.cpp  ContaCliente.h
widgets/ContaFornecedor/: CMakeLists.txt  ContaFornecedor.cpp  ContaFornecedor.h
widgets/ContaWidget/: CMakeLists.txt  ContaWidget.cpp  ContaWidget.h  ItemContaWidget.cpp  ItemContaWidget.h
www/: google_conversion.js
www/apps/Calculadora/: calculadora.css  calculadora.js
www/apps/Loja/: loja.js  loja.xml
www/css/: practwave.css
www/javascript/: practwave.js
www/site/: faq.html  index.html  manutencao.html  privacidade.html  robots.txt
